data/repos_history/benebobaa/k8s-deployment-learn/2024-08-02T10:18:58Z/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
---
apiVersion: v1
kind: Service
metadata:
  name: bene-cluster
  namespace: production
  labels:
    app: bene-cluster
spec:
  selector:
    app: bene-cluster
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bene-cluster
  namespace: production
spec:
  selector:
    matchLabels:
      app: bene-cluster
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bene-cluster
    spec:
      containers:
        - name: bene-app
          image: asia.gcr.io/${PROJECT_ID}/production/benek8s:${SHORT_SHA}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            readOnlyRootFilesystem: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bene-cluster
  namespace: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: bene-ip
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: bene-cluster
spec:
  rules:
    - host: cloud.beneboba.me
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: bene-cluster
                port:
                  number: 80
